nanoem/nanoem_p.h

struct nanoem_unicode_string_factory_t {
    nanoem_unicode_string_factory_from_codec_t from_cp932;
    nanoem_unicode_string_factory_from_codec_t from_utf8;
    nanoem_unicode_string_factory_from_codec_t from_utf16;
    nanoem_unicode_string_factory_to_codec_t to_cp932;
    nanoem_unicode_string_factory_to_codec_t to_utf8;
    nanoem_unicode_string_factory_to_codec_t to_utf16;
    nanoem_unicode_string_factory_hash_t hash;
    nanoem_unicode_string_factory_compare_t compare;
    nanoem_unicode_string_factory_get_cache_t get_cache;
    nanoem_unicode_string_factory_set_cache_t set_cache;
    nanoem_unicode_string_factory_destroy_string_t destroy_string;
    nanoem_unicode_string_factory_destroy_byte_array_t destroy_byte_array;
    void *opaque_data;
};
typedef int nanoem_motion_track_index_t;
struct nanoem_buffer_t {
    const nanoem_u8_t *data;
    nanoem_rsize_t length;
    nanoem_rsize_t offset;
};
struct nanoem_motion_t {
    nanoem_unicode_string_factory_t *factory;
    kh_annotation_t *annotations;
    nanoem_unicode_string_t *target_model_name;
    nanoem_rsize_t num_accessory_keyframes;
    nanoem_motion_accessory_keyframe_t **accessory_keyframes;
    nanoem_rsize_t num_bone_keyframes;
    nanoem_motion_bone_keyframe_t **bone_keyframes;
    nanoem_rsize_t num_morph_keyframes;
    nanoem_motion_morph_keyframe_t **morph_keyframes;
    nanoem_rsize_t num_camera_keyframes;
    nanoem_motion_camera_keyframe_t **camera_keyframes;
    nanoem_rsize_t num_light_keyframes;
    nanoem_motion_light_keyframe_t **light_keyframes;
    nanoem_rsize_t num_model_keyframes;
    nanoem_motion_self_shadow_keyframe_t **self_shadow_keyframes;
    nanoem_rsize_t num_self_shadow_keyframes;
    nanoem_motion_model_keyframe_t **model_keyframes;
    nanoem_motion_track_index_t local_bone_motion_track_allocated_id;
    kh_motion_track_bundle_t *local_bone_motion_track_bundle;
    nanoem_motion_track_index_t local_morph_motion_track_allocated_id;
    kh_motion_track_bundle_t *local_morph_motion_track_bundle;
    nanoem_motion_track_index_t global_motion_track_allocated_id;
    kh_motion_track_bundle_t *global_motion_track_bundle;
    nanoem_motion_format_type_t type;
    nanoem_frame_index_t max_frame_index;
    nanoem_f32_t preferred_fps;
    nanoem_user_data_t *user_data;
};
struct nanoem_motion_keyframe_object_t {
    int index;
    nanoem_motion_t *parent_motion;
    nanoem_frame_index_t frame_index;
    nanoem_user_data_t *user_data;
    kh_annotation_t *annotations;
};
struct nanoem_motion_accessory_keyframe_t {
    nanoem_motion_keyframe_object_t base;
    nanoem_f128_t translation;
    nanoem_f128_t orientation;
    nanoem_f32_t scale_factor;
    nanoem_f32_t opacity;
    nanoem_bool_t is_add_blending_enabled;
    nanoem_bool_t is_shadow_enabled;
    nanoem_bool_t visible;
    nanoem_rsize_t num_effect_parameters;
    nanoem_motion_effect_parameter_t **effect_parameters;
    nanoem_motion_track_index_t accessory_id;
    nanoem_motion_outside_parent_t *outside_parent;
};
struct nanoem_motion_bone_keyframe_t {
    nanoem_motion_keyframe_object_t base;
    nanoem_f128_t translation;
    nanoem_f128_t orientation;
    nanoem_interpolation_t interplation[NANOEM_MOTION_BONE_KEYFRAME_INTERPOLATION_TYPE_MAX_ENUM];
    nanoem_motion_track_index_t bone_id;
    nanoem_u32_t stage_index;
    nanoem_bool_t is_physics_simulation_enabled;
};
struct nanoem_motion_camera_keyframe_t {
    nanoem_motion_keyframe_object_t base;
    nanoem_f128_t look_at;
    nanoem_f128_t angle;
    nanoem_f32_t distance;
    int fov;
    nanoem_interpolation_t interplation[NANOEM_MOTION_CAMERA_KEYFRAME_INTERPOLATION_TYPE_MAX_ENUM];
    nanoem_bool_t is_perspective_view;
    nanoem_u32_t stage_index;
    nanoem_motion_outside_parent_t *outside_parent;
};
struct nanoem_motion_light_keyframe_t {
    nanoem_motion_keyframe_object_t base;
    nanoem_f128_t color;
    nanoem_f128_t direction;
};
struct nanoem_motion_model_keyframe_t {
    nanoem_motion_keyframe_object_t base;
    nanoem_bool_t visible;
    nanoem_rsize_t num_constraint_states;
    nanoem_motion_model_keyframe_constraint_state_t **constraint_states;
    nanoem_rsize_t num_effect_parameters;
    nanoem_motion_effect_parameter_t **effect_parameters;
    nanoem_rsize_t num_outside_parents;
    nanoem_motion_outside_parent_t **outside_parents;
    nanoem_bool_t has_edge_option;
    nanoem_f32_t edge_scale_factor;
    nanoem_f128_t edge_color;
    nanoem_bool_t is_add_blending_enabled;
    nanoem_bool_t is_physics_simulation_enabled;
};
struct nanoem_motion_morph_keyframe_t {
    nanoem_motion_keyframe_object_t base;
    nanoem_f32_t weight;
    nanoem_motion_track_index_t morph_id;
};
struct nanoem_motion_self_shadow_keyframe_t {
    nanoem_motion_keyframe_object_t base;
    nanoem_f32_t distance;
    int mode;
};
struct nanoem_user_data_t {
    union nanoem_user_data_destroy_callback_union_t {
        nanoem_user_data_on_destroy_model_t model;
        nanoem_user_data_on_destroy_motion_t motion;
        nanoem_user_data_on_destroy_model_object_t model_object;
        nanoem_user_data_on_destroy_keyframe_object_t keyframe_object;
    } destroy;
    enum nanoem_user_data_destroy_callback_type_t type;
    void *opaque;
};