rust/core/src/nanoem/native.rs

    #[allow(dead_code)]
    pub fn nanoemAccessoryKeyframeGetKeyframeObject(keyframe: *const nanoem_accessory_keyframe_t) -> *const nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemAccessoryKeyframeGetKeyframeObjectMutable(keyframe: *mut nanoem_accessory_keyframe_t) -> *mut nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeGetName(keyframe: *const nanoem_model_bone_keyframe_t) -> *const nanoem_unicode_string_t;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeGetTranslation(keyframe: *const nanoem_model_bone_keyframe_t) -> *const f32;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeGetOrientation(keyframe: *const nanoem_model_bone_keyframe_t) -> *const f32;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeGetId(keyframe: *const nanoem_model_bone_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeGetInterpolation(keyframe: *const nanoem_model_bone_keyframe_t, index: nanoem_model_bone_keyframe_interpolation_type_t) -> *const u8;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeIsLinearInterpolation(keyframe: *const nanoem_model_bone_keyframe_t, index: nanoem_model_bone_keyframe_interpolation_type_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeGetStageIndex(keyframe: *const nanoem_model_bone_keyframe_t) -> u32;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeIsPhysicsSimulationEnabled(keyframe: *const nanoem_model_bone_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeGetKeyframeObject(keyframe: *const nanoem_model_bone_keyframe_t) -> *const nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemModelBoneKeyframeGetKeyframeObjectMutable(keyframe: *mut nanoem_model_bone_keyframe_t) -> *mut nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetLookAt(keyframe: *const nanoem_camera_keyframe_t) -> *const f32;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetAngle(keyframe: *const nanoem_camera_keyframe_t) -> *const f32;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetDistance(keyframe: *const nanoem_camera_keyframe_t) -> f32;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetFov(keyframe: *const nanoem_camera_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeIsPerspectiveView(keyframe: *const nanoem_camera_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetInterpolation(keyframe: *const nanoem_camera_keyframe_t, index: nanoem_camera_keyframe_interpolation_type_t) -> *const u8;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeIsLinearInterpolation(keyframe: *const nanoem_camera_keyframe_t, index: nanoem_camera_keyframe_interpolation_type_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetStageIndex(keyframe: *const nanoem_camera_keyframe_t) -> u32;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetOutsideParent(keyframe: *const nanoem_camera_keyframe_t) -> *const nanoem_outside_parent_t;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetOutsideParentMutable(keyframe: *mut nanoem_camera_keyframe_t) -> *mut nanoem_outside_parent_t;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetKeyframeObject(keyframe: *const nanoem_camera_keyframe_t) -> *const nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemCameraKeyframeGetKeyframeObjectMutable(keyframe: *mut nanoem_camera_keyframe_t) -> *mut nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemLightKeyframeGetColor(keyframe: *const nanoem_light_keyframe_t) -> *const f32;
    #[allow(dead_code)]
    pub fn nanoemLightKeyframeGetDirection(keyframe: *const nanoem_light_keyframe_t) -> *const f32;
    #[allow(dead_code)]
    pub fn nanoemLightKeyframeGetKeyframeObject(keyframe: *const nanoem_light_keyframe_t) -> *const nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemLightKeyframeGetKeyframeObjectMutable(keyframe: *mut nanoem_light_keyframe_t) -> *mut nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeIsVisible(keyframe: *const nanoem_model_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeGetEdgeScaleFactor(keyframe: *const nanoem_model_keyframe_t) -> f32;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeGetEdgeColor(keyframe: *const nanoem_model_keyframe_t) -> *const f32;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeIsAddBlendEnabled(keyframe: *const nanoem_model_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeIsPhysicsSimulationEnabled(keyframe: *const nanoem_model_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeGetAllConstraintStateObjects(keyframe: *const nanoem_model_keyframe_t, num_objects: *mut usize) -> *const *mut nanoem_model_keyframe_constraint_state_t;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeGetAllEffectParameterObjects(keyframe: *const nanoem_model_keyframe_t, num_objects: *mut usize) -> *const *mut nanoem_effect_parameter_t;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeGetAllOutsideParentObjects(keyframe: *const nanoem_model_keyframe_t, num_objects: *mut usize) -> *const *mut nanoem_outside_parent_t;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeConstraintStateGetBoneName(state: *const nanoem_model_keyframe_constraint_state_t) -> *const nanoem_unicode_string_t;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeConstraintStateGetBoneId(state: *const nanoem_model_keyframe_constraint_state_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeConstraintStateIsEnabled(state: *const nanoem_model_keyframe_constraint_state_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeGetKeyframeObject(keyframe: *const nanoem_model_keyframe_t) -> *const nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemModelKeyframeGetKeyframeObjectMutable(keyframe: *mut nanoem_model_keyframe_t) -> *mut nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemModelMorphKeyframeGetName(keyframe: *const nanoem_model_morph_keyframe_t) -> *const nanoem_unicode_string_t;
    #[allow(dead_code)]
    pub fn nanoemModelMorphKeyframeGetWeight(keyframe: *const nanoem_model_morph_keyframe_t) -> f32;
    #[allow(dead_code)]
    pub fn nanoemModelMorphKeyframeGetId(keyframe: *const nanoem_model_morph_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemModelMorphKeyframeGetKeyframeObject(keyframe: *const nanoem_model_morph_keyframe_t) -> *const nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemModelMorphKeyframeGetKeyframeObjectMutable(keyframe: *mut nanoem_model_morph_keyframe_t) -> *mut nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemSelfShadowKeyframeGetDistance(keyframe: *const nanoem_self_shadow_keyframe_t) -> f32;
    #[allow(dead_code)]
    pub fn nanoemSelfShadowKeyframeGetMode(keyframe: *const nanoem_self_shadow_keyframe_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemSelfShadowKeyframeGetKeyframeObject(keyframe: *const nanoem_self_shadow_keyframe_t) -> *const nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemSelfShadowKeyframeGetKeyframeObjectMutable(keyframe: *mut nanoem_self_shadow_keyframe_t) -> *mut nanoem_motion_keyframe_object_t;
    #[allow(dead_code)]
    pub fn nanoemMotionCreate(factory: *mut nanoem_unicode_string_factory_t, status: *mut nanoem_status_t) -> *mut nanoem_motion_t;
    #[allow(dead_code)]
    pub fn nanoemMotionLoadFromBufferVMD(motion: *mut nanoem_motion_t, buffer: *mut nanoem_buffer_t, offset: u32, status: *mut nanoem_status_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemMotionLoadFromBuffer(motion: *mut nanoem_motion_t, buffer: *mut nanoem_buffer_t, offset: u32, status: *mut nanoem_status_t) -> i32;
    #[allow(dead_code)]
    pub fn nanoemMotionGetFormatType(motion: *const nanoem_motion_t) -> nanoem_motion_format_type_t;
    #[allow(dead_code)]
    pub fn nanoemMotionGetTargetModelName(motion: *const nanoem_motion_t) -> *const nanoem_unicode_string_t;
    #[allow(dead_code)]
    pub fn nanoemMotionGetMaxFrameIndex(motion: *const nanoem_motion_t) -> u32;
    #[allow(dead_code)]
    pub fn nanoemMotionGetPreferredFPS(motion: *const nanoem_motion_t) -> f32;
    #[allow(dead_code)]
    pub fn nanoemMotionGetAnnotation(motion: *const nanoem_motion_t, key: *const i8) -> *const i8;
    #[allow(dead_code)]
    pub fn nanoemMotionGetAllAccessoryKeyframeObjects(motion: *const nanoem_motion_t, num_keyframes: *mut usize) -> *const *mut nanoem_accessory_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionGetAllBoneKeyframeObjects(motion: *const nanoem_motion_t, num_keyframes: *mut usize) -> *const *mut nanoem_model_bone_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionGetAllCameraKeyframeObjects(motion: *const nanoem_motion_t, num_keyframes: *mut usize) -> *const *mut nanoem_camera_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionGetAllLightKeyframeObjects(motion: *const nanoem_motion_t, num_keyframes: *mut usize) -> *const *mut nanoem_light_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionGetAllModelKeyframeObjects(motion: *const nanoem_motion_t, num_keyframes: *mut usize) -> *const *mut nanoem_model_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionGetAllMorphKeyframeObjects(motion: *const nanoem_motion_t, num_keyframes: *mut usize) -> *const *mut nanoem_model_morph_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionGetAllSelfShadowKeyframeObjects(motion: *const nanoem_motion_t, num_keyframes: *mut usize) -> *const *mut nanoem_self_shadow_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionExtractBoneTrackKeyframes(motion: *const nanoem_motion_t, name: *const nanoem_unicode_string_t, num_keyframes: *mut usize, status: *mut nanoem_status_t) -> *const *mut nanoem_model_bone_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionExtractMorphTrackKeyframes(motion: *const nanoem_motion_t, name: *const nanoem_unicode_string_t, num_keyframes: *mut usize, status: *mut nanoem_status_t) -> *const *mut nanoem_model_morph_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionFindAccessoryKeyframeObject(motion: *const nanoem_motion_t, index: u32) -> *const nanoem_accessory_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionFindBoneKeyframeObject(motion: *const nanoem_motion_t, name: *const nanoem_unicode_string_t, index: u32) -> *const nanoem_model_bone_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionFindCameraKeyframeObject(motion: *const nanoem_motion_t, index: u32) -> *const nanoem_camera_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionFindLightKeyframeObject(motion: *const nanoem_motion_t, index: u32) -> *const nanoem_light_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionFindModelKeyframeObject(motion: *const nanoem_motion_t, index: u32) -> *const nanoem_model_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionFindMorphKeyframeObject(motion: *const nanoem_motion_t, name: *const nanoem_unicode_string_t, index: u32) -> *const nanoem_model_morph_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionFindSelfShadowKeyframeObject(motion: *const nanoem_motion_t, index: u32) -> *const nanoem_self_shadow_keyframe_t;
    #[allow(dead_code)]
    pub fn nanoemMotionSearchClosestAccessoryKeyframes(motion: *const nanoem_motion_t, base_index: u32, prev_keyframe: *const *mut nanoem_accessory_keyframe_t, next_keyframe: *const *mut nanoem_accessory_keyframe_t) -> ();
    #[allow(dead_code)]
    pub fn nanoemMotionSearchClosestBoneKeyframes(motion: *const nanoem_motion_t, name: *const nanoem_unicode_string_t, base_index: u32, prev_keyframe: *const *mut nanoem_model_bone_keyframe_t, next_keyframe: *const *mut nanoem_model_bone_keyframe_t) -> ();
